[grok] Artifact.restore + ADR 0004 interaction retention (#6, #7)
[grok] Implemented Artifact.restore() with Map.copyOf metadata normalization,
round-trip/validation tests, and ADR 0004 (append-only interactions; no generic
delete; redact deferred; purge platform-owned).

Closes #6
Closes #7

Author/implementation: Grok (xAI)